examples/negative/parse_errors/L1/reserved_begin.ob
MODULE Reserved;

VAR BEGIN: INTEGER;

END Reserved.
